<resources>
    <string name="app_name">Video Downloader for twitch</string>
    <string name="let_s_go">Let’s Start</string>
    <string name="fast_video_downloader_for_ntwitch_videos">Fast Video Downloader for\nTwitch Videos</string>
    <string name="twitch_video_ndownloader">Twitch Video\nDownloader</string>
    <string name="easily_download_videos_from_your_ntwitch_video_in_high_quality_nenjoy_offline_anytime_any_where">Easily Download Videos from your\nTwitch video in High Quality.\nEnjoy Offline anytime, any where.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="home">Home</string>
    <string name="progress">Progress</string>
    <string name="downloads">Downloads</string>
    <string name="enter_twitch_url">Enter Twitch Url</string>
    <string name="download_video">Download Video</string>
    <string name="download">Download</string>
    <string name="generate_video_content">Generate Video Content</string>
    <string name="no_video_in_progress">No video is in progress</string>
    <string name="no_video_yet">No video yet</string>
    <string name="rename">Rename</string>
    <string name="video">Video</string>
    <string name="_144p">144P</string>
    <string name="mp4_35_26_mb">(MP4) 35.26 MB</string>

    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="delete">Delete</string>
    <string name="delete_cap">Are you sure you want to delete\nthe file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="submit">Rate Now</string>
    <string name="exit">Exit</string>
    <string name="are_you_sure_you_want_to_exit">Are you sure you want to\nexit the app</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_us_description">Rate your experience with us</string>
    <string name="continues">Continue</string>
    <string name="downloader">Downloader</string>
    <string name="this_section_may_contain_ads">This section may contain ads.</string>

</resources>