<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/splash_bg_gradient"
    tools:context=".presentation.activities.start_ups.LauncherActivity">


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/splashIcon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_30sdp"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title1"
        tools:src="@drawable/splash_icon"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/twitch_video_ndownloader"
        android:textAllCaps="false"
        android:gravity="center"
        android:fontFamily="@font/montserrat_extrabold"
        android:textColor="@color/white"
        android:textSize="@dimen/_22ssp"
        android:includeFontPadding="false"
        android:layout_marginVertical="@dimen/_10sdp"
        android:lineSpacingMultiplier="0.9"
        app:layout_constraintTop_toBottomOf="@id/splashIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/title2"
          />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fast_video_downloader_for_ntwitch_videos"
        android:textAllCaps="false"
        android:gravity="center"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        android:includeFontPadding="false"
        app:layout_constraintTop_toBottomOf="@id/title1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/startBt"
        />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide85"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.825"
        />
    <com.google.android.material.button.MaterialButton
        android:id="@+id/startBt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/let_s_go"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/app_first_color"
        app:cornerRadius="@dimen/_8sdp"
        android:textSize="@dimen/_14ssp"
        android:includeFontPadding="false"
        android:backgroundTint="@color/white"
        app:rippleColor="@color/app_second_color"
        android:layout_marginBottom="@dimen/_40sdp"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintWidth_percent="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide85"
        />

</androidx.constraintlayout.widget.ConstraintLayout>