<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="15dp"
    tools:layout_margin="25dp"
    app:cardBackgroundColor="@color/white"
    app:strokeColor="@android:color/transparent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:id="@+id/deleteContentLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="visible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageView
                android:id="@+id/image"
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintHeight_percent="0.125"
                android:contentDescription="@string/app_name"
                android:src="@drawable/image_delete"
                app:layout_constraintBottom_toTopOf="@+id/caption"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/delete"
                android:textAlignment="center"
                android:textColor="@color/app_first_color"
                android:textSize="@dimen/_17ssp"
                android:layout_marginTop="@dimen/_7sdp"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image"
                />



            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/delete_cap"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:layout_marginVertical="@dimen/_7sdp"
                app:layout_constraintBottom_toTopOf="@+id/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caption"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                >

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/delete"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cornerRadius="@dimen/_10sdp"
                    android:text="@string/yes"
                    android:fontFamily="@font/montserrat_semibold"
                    android:stateListAnimator="@null"
                    app:strokeWidth="@dimen/_1sdp"
                    app:strokeColor="@android:color/transparent"
                    android:textColor="@color/white"
                    app:rippleColor="@color/white"
                    android:layout_marginEnd="@dimen/_3sdp"
                    android:layout_weight="1"
                    app:backgroundTint="@color/app_second_color"
                    app:layout_constraintBottom_toBottomOf="@+id/cancel"
                    app:layout_constraintTop_toTopOf="@id/cancel"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/cancel"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:cornerRadius="@dimen/_10sdp"
                    android:fontFamily="@font/montserrat_semibold"
                    android:text="@string/no"
                    android:textColor="@color/app_first_color"
                    app:strokeWidth="0dp"
                    app:strokeColor="@android:color/transparent"
                    app:backgroundTint="@color/white_200"
                    app:rippleColor="@color/app_first_color"
                    android:layout_marginStart="@dimen/_3sdp"
                    android:layout_weight="1"
                    android:gravity="center"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/delete"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description"
                    />


            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/rateLl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_15sdp"
            android:orientation="vertical"
            android:gravity="center"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            >
            <ImageView
                android:layout_width="@dimen/_60sdp"
                android:layout_height="@dimen/_60sdp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintHeight_percent="0.125"
                android:contentDescription="@string/app_name"
                android:src="@drawable/gem_1"
                app:layout_constraintBottom_toTopOf="@+id/caption"
                app:layout_constraintVertical_chainStyle="packed"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_semibold"
                android:text="@string/rate_us"
                android:textAlignment="center"
                android:textColor="@color/app_first_color"
                android:textSize="@dimen/_17ssp"
                app:layout_constraintBottom_toTopOf="@+id/description"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/image"
                />

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/rate_us_description"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_13ssp"
                android:layout_marginVertical="@dimen/_7sdp"
                app:layout_constraintBottom_toTopOf="@+id/delete"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/caption"
                />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toTopOf="@+id/rateNowBtn"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star1"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/star_unselect" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star2"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/star_unselect" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star3"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/star_unselect" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star4"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginHorizontal="@dimen/_5sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/star_unselect" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/star5"
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:src="@drawable/star_unselect" />
            </androidx.appcompat.widget.LinearLayoutCompat>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/rateNowBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cornerRadius="@dimen/_10sdp"
                android:text="@string/submit"
                android:fontFamily="@font/montserrat_semibold"
                android:stateListAnimator="@null"
                app:strokeWidth="@dimen/_1sdp"
                app:strokeColor="@android:color/transparent"
                app:layout_constraintWidth_percent="0.55"
                android:textColor="@color/white"
                app:rippleColor="@color/app_second_color"
                android:layout_marginTop="@dimen/_10sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ratingBar"
                app:layout_constraintStart_toStartOf="@+id/description"
                app:layout_constraintEnd_toEndOf="@+id/description"
                />

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>
