<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.fragments.LandingFragment"
    >

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/topBg"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="fitXY"
        app:layout_constraintHeight_percent="0.25"
        android:src="@drawable/main_top_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/drawer"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:padding="@dimen/_7sdp"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintDimensionRatio="1:1"
        android:src="@drawable/more"
        app:layout_constraintTop_toTopOf="@id/topBg"
        app:layout_constraintStart_toStartOf="@id/topBg"
        app:layout_constraintBottom_toTopOf="@+id/captionText"

        />
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/captionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/twitch_video_ndownloader"
        android:fontFamily="@font/montserrat_bold"
        android:textSize="@dimen/_18ssp"
        android:textColor="@color/white"
        android:textAllCaps="true"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@id/drawer"
        app:layout_constraintBottom_toBottomOf="@id/topBg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="@dimen/_12sdp"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/titleText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:fontFamily="@font/montserrat_bold"
        android:gravity="start"
        android:includeFontPadding="false"
        android:text="@string/enter_twitch_url"
        android:textColor="@color/black"
        android:textSize="@dimen/_15ssp"
        android:layout_marginStart="@dimen/_15sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linkLinear"
        app:layout_constraintTop_toBottomOf="@+id/topBg" />
    <LinearLayout
        android:id="@+id/linkLinear"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingVertical="@dimen/_8sdp"
        android:paddingStart="@dimen/_12sdp"
        android:layout_marginHorizontal="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/generateBt"
        app:layout_constraintTop_toBottomOf="@+id/titleText">

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/enterLinkEt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:background="@android:color/transparent"
            android:fontFamily="@font/montserrat"
            android:hint="Paste URL here..."
            android:padding="@dimen/_3sdp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="@dimen/_13ssp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/pasteImage"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:background="@drawable/ripple_oval"
            android:padding="@dimen/_3sdp"
            android:src="@drawable/paste" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/generateBt"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="@font/montserrat_bold"
        android:includeFontPadding="false"
        android:text="@string/generate_video_content"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"
        app:cornerRadius="@dimen/_8sdp"
        android:background="@drawable/button_gradient"
        app:backgroundTint="@null"
        app:rippleColor="@color/white"
        android:layout_marginHorizontal="@dimen/_15sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.075"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linkLinear" />

    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"
        />


</androidx.constraintlayout.widget.ConstraintLayout>